fixed layout issues and submit button

--- a/assets/stylesheet/_sass/_default.scss
+++ b/assets/stylesheet/_sass/_default.scss
@@ -186,7 +186,7 @@ html, body {
 	}
 
 	.intro {
-		height: 100%;
+		height: 140%;
 		z-index: $content-zindex;
 		@include font-smoothing;
 		left: 0;
@@ -233,13 +233,13 @@ html, body {
 			font-family: $title-font;
 			font-size: 1.6em;
 			text-align:center;
-			text-transform:uppercase;
+			font-weight:300;
 		}
 
 		@include MQ(M) {
 			h2 {
 				padding: 0 1%;
-				font-size: 2.8em;
+				font-size: 2.5em;
 				top: 55%;
 			}
 		}
@@ -247,7 +247,7 @@ html, body {
 	@include MQ(L) {
 		h2 {
 			padding: 0 2%;
-			font-size: 2.8em;
+			font-size: 2.5em;
 			top: 55%;	
 		}
 	}
