--- a/assets/stylesheet/_sass/_location.scss
+++ b/assets/stylesheet/_sass/_location.scss
@@ -26,10 +26,9 @@
 		text-align: center;
 
 		iframe {
-			
 			max-width: 750px;
-			width: 100%;
-			height: 500px;
+			width: 80%;
+			height: 400px;
 		}
 	}
 
